# DevOpsvAgentJustMe

./: .gitignore  README.md  build_python312.sh  package-lock.json  run_tests.sh  文档结构改进方案.md  文档重构模式与限制.md
AAB业务目标/: 原本.md  译本.md
devops-agent/: .env.example  .gitignore  README.md  pyproject.toml  pytest_results2.txt  test_api.py  test_console_clear.py  test_full_detect_flow.py  test_summary.py  test_think.py  test_tui_flow.py
devops-agent/docs/: Backend_Function_Gap_Analysis.md  README.md  brainstorm_dynamic_tools.md  deployment-guide.md  selinux-policy-design.md  tui-usage-guide.md
devops-agent/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
devops-agent/frontend/src/: App.jsx  index.css
devops-agent/scripts/: filesystem_mcp_server.py  fs_mcp_config.json  init_db.py  mcp_test_config.json  test_fix.py  test_mcp.py  test_mcp_server.py  test_whitelist.py
devops-agent/scripts/mcp_servers/: fetch_server.py  filesystem_server.py  time_server.py
devops-agent/skills/disk-cleanup/: SKILL.md
devops-agent/src/devops_agent/: __init__.py  config.py  events.py  main.py  metrics.py
devops-agent/tests/: __init__.py  conftest.py  test_api.py  test_day1_skeleton.py  test_db_repos.py  test_executor.py  test_orchestrator.py  test_probe.py  test_probe_reasoning.py  test_safety_phase2.py  test_safety_validator.py
devops-agent/tests/delivery/: __init__.py  run_all_delivery_tests.py  test_audit_reasoning.py  test_base.py  test_config_tools.py  test_health_probe.py  test_safety_api.py  test_sessions_chat.py
(+178 files in other folders)
